--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">BackgammonAndroid</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_lobby">LobbyActivity</string>
+    <string name="title_activity_in_game">InGameActivity</string>
+    <string name="title_activity_trophy">TrophyActivity</string>
+    <string name="title_activity_stats">StatsActivity</string>
 </resources>
