--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,23 @@
 <resources>
-    <string name="app_name">BackgammonAndroid</string>
+    <string name="app_name">Backgammon</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_lobby">LobbyActivity</string>
     <string name="title_activity_in_game">InGameActivity</string>
     <string name="title_activity_trophy">TrophyActivity</string>
     <string name="title_activity_stats">StatsActivity</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_username">Username</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign up for an account</string>
+    <string name="action_sign_in_short">Sign up</string>
+    <string name="error_invalid_username">This username is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_empty_password">You have to fill out the password</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
