--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">Backgammon</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_lobby">LobbyActivity</string>
-    <string name="title_activity_in_game">InGameActivity</string>
-    <string name="title_activity_trophy">TrophyActivity</string>
-    <string name="title_activity_stats">StatsActivity</string>
+    <string name="title_activity_lobby">Lobby</string>
+    <string name="title_activity_in_game">Game</string>
+    <string name="title_activity_trophy">Trophy Room</string>
+    <string name="title_activity_stats">Stats</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
@@ -20,4 +20,5 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="action_log_in_short">Log in</string>
 </resources>
