Bætti við border.xml, og icons (fyrir face,punkt og klukku) í drawable. Útfærði list entry fyrir lobby lista, bjó til containers fyrir tvö fragment í lobby activity. Bjó til fragment_lobby_list. Tengdi breytur saman við Id í LobbyActivity, LobbyListAdapter og ListFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="TEST">Test</string>
+    <string name="clock_image_description">An image of a clock</string>
+    <string name="point_image_description">An image of a point</string>
+    <string name="player_image_description">An image of a player</string>
 </resources>
