--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,8 +31,13 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="TEST">Test</string>
     <string name="clock_image_description">An image of a clock</string>
     <string name="point_image_description">An image of a point</string>
     <string name="player_image_description">An image of a player</string>
+
+    <!-- Strings related to buttons -->
+    <string name="btn_to_stats">Stats</string>
+    <string name="btn_to_trophy">Trophies</string>
+    <string name="btn_chat">Submit</string>
+    <string name="btn_to_new_game">New game</string>
 </resources>
