--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="btn_to_trophy">Trophies</string>
     <string name="btn_chat">Submit</string>
     <string name="btn_to_new_game">New game</string>
+    <string name="chat_testMsg">Feel the Bern!</string>
 </resources>
