Importaði icon fyrir send message. Bjó til recyclerview fyrir chat í lobby_actitivy. Tengdi chat recyclerview og chat entry í lobby activity. Bjó til chat_entry.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="btn_chat">Submit</string>
     <string name="btn_to_new_game">New game</string>
     <string name="chat_testMsg">Feel the Bern!</string>
+    <string name="chat_hint">Enter a message...</string>
 </resources>
