Færði switch takka úr fragments yfir í lobby og tengdi þá í lobby. Ef smellt er á switch takka þá skiptist á milli annaðhvort list eða setup match fragmenta.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
     <string name="btn_to_new_game">New game</string>
     <string name="chat_testMsg">Feel the Bern!</string>
     <string name="chat_hint">Enter a message...</string>
+    <string name="btn_watch">Watch</string>
+    <string name="swap_description">A button that switches between views</string>
 </resources>
