--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,9 +52,9 @@
     <string name="fivePoint">5</string>
     <string name="threePoint">3</string>
     <string name="infinityTime">∞</string>
-    <string name="s15Time">15 sec</string>
-    <string name="s30Time">30 sec</string>
-    <string name="s45Time">45 sec</string>
+    <string name="s15Time">10 s</string>
+    <string name="s30Time">20 s</string>
+    <string name="s45Time">30 s</string>
     <string name="android_image_description">An image of an android</string>
     <string name="easyDifficulty">Easy</string>
     <string name="mediumDifficulty">Medium</string>
