Whole lotta change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <string name="example_time_left">45</string>
     <string name="btn_ok">Ok</string>
     <string name="present_trophy_heading">WOW! A NEW TROPHY!</string>
-    <string name="throw_dice">Throw Dices</string>
+    <string name="throw_dice">Throw Die</string>
     <string name="end_turn">End Turn</string>
     <string name="double_stakes">Double Stakes</string>
     <string name="match_time_example">No time limit</string>
